# simple-compiler

./: .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  scomp
.cache/clangd/index/: fstream.58A03CC7CFEF7AD3.idx  lexer.cpp.6CF0107105E130F1.idx  lexer.h.0894CE9B23228616.idx  main.cpp.272B0014C58E8513.idx  tokenize.cpp.48CBD2BF8A0BD6E2.idx
examples/: program.lq
includes/core/: core.hpp
includes/debbuger/print/: print_class_ast.hpp
includes/frontend/lexer/: keywords.h  lexer.h
includes/frontend/parser/: parser.h
includes/frontend/utils/: utils.hpp
src/: main.cpp
src/debbuger/print/: print_class_ast.cpp
src/frontend/core/: core.cpp
src/frontend/lexer/: keywords.cpp  lexer.cpp  tokenize.cpp
src/frontend/parser/: ast.cpp  parser.cpp
src/frontend/parser/declarations/: parse_class_declaration.cpp
src/frontend/utils/: utills.cpp  utils.cpp
